# ChangeLog for app-admin/mcelog
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/mcelog/ChangeLog,v 1.42 2015/04/25 14:28:18 hasufell Exp $

*mcelog-109 (25 Apr 2015)

  25 Apr 2015; Julian Ospald <hasufell@gentoo.org> +mcelog-109.ebuild:
  version bump by Ben Kohler

*mcelog-103 (09 Sep 2014)

  09 Sep 2014; Julian Ospald <hasufell@gentoo.org> +mcelog-103.ebuild,
  +files/mcelog.init-r1:
  version bump by Ben Kohler and Lars Wendler wrt #519494

  15 Jun 2014; Homer Parker <hparker@gentoo.org> mcelog-100.ebuild:
  Stable on amd64, bug #502604

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> mcelog-100.ebuild:
  x86 stable wrt bug #502604

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org>
  mcelog-1.0_pre3_p20130621-r1.ebuild:
  x86 stable, bug #486296

*mcelog-100 (23 Oct 2013)

  23 Oct 2013; Julian Ospald <hasufell@gentoo.org> +mcelog-100.ebuild:
  version bump by Ben Kohler

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  mcelog-1.0_pre3_p20130621-r1.ebuild:
  amd64 stable, bug #486296

*mcelog-1.0_pre3_p20130621-r1 (11 Sep 2013)

  11 Sep 2013; Pacho Ramos <pacho@gentoo.org> +files/mcelog.service,
  +mcelog-1.0_pre3_p20130621-r1.ebuild:
  Add unit file (#479912)

*mcelog-1.0_pre3_p20130621 (10 Jul 2013)

  10 Jul 2013; Julian Ospald <hasufell@gentoo.org>
  +mcelog-1.0_pre3_p20130621.ebuild:
  version bump wrt #473254

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org>
  mcelog-1.0_pre3_p20120918-r1.ebuild:
  Stable for amd64, wrt bug #474424

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org>
  mcelog-1.0_pre3_p20120918-r1.ebuild:
  Stable for x86, wrt bug #474424

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  16 Feb 2013; Mike Frysinger <vapier@gentoo.org> mcelog-1.0_pre3.ebuild:
  Drop virtual/cron dep since this runs fine w/out it.

  05 Feb 2013; Julian Ospald <hasufell@gentoo.org>
  mcelog-1.0_pre3_p20120918-r1.ebuild: